# moita

./: .env.example  .gitignore  .travis.yml  README.md  app.json  config.py  moita.py  pyproject.toml  requirements.txt  run.py  sample.ics  setup.py  tests.py  wsgi.py
app/: __init__.py  moita.py  tests.py
